# routes/api.php
@@ -4,6 +4,7 @@ use App\Http\Controllers\Api\v1\ReferenceController;
 use App\Http\Controllers\Api\v1\SettingController;
 use App\Http\Controllers\Api\v1\EmployeeController;
 use App\Http\Controllers\Api\v1\OvertimeController;
+use App\Http\Controllers\Api\v1\OvertimePayController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -27,4 +28,5 @@ Route::group(['prefix' => 'v1'], function () {
     Route::patch('settings', [SettingController ::class, 'update']);
     Route::post('employees', [EmployeeController ::class, 'create']);
     Route::post('overtimes', [OvertimeController ::class, 'create']);
+    Route::get('overtime-pays/calculate', [OvertimePayController ::class, 'calculate']);
 });
